name:            PomTree
version:         0.1
license:         GPL
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        positioned ordered multitree, a generalized zipper structure
build-type:      Simple
build-depends:   containers, base
exposed-modules: Data.PomTree
hs-source-dirs: src
